Update URL to js script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
-    <script src="homework9script.js"></script>
+    <script src="https://raw.githubusercontent.com/LucasOng1/3179/refs/heads/main/homework9script.js"></script>
 
     <title>Homework 9</title>
 </head>
