Add duplicate data vis 2 files to main
Added for page building via HTML in main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel = 'stylesheet' type = 'text/css' href = 'datavis2_style.css'>
 
 <head>
     <meta charset="UTF-8">
@@ -10,14 +11,62 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
-    <script src="homework9script.js"></script>
+    <script src="datavis2_script.js"></script>
 
-    <title>Homework 9</title>
+    <title>Data Visualisation 2</title>
 </head>
 
 <body>
-    <h1>Homework 9</h1>
-    <div id="vis1">
+    <div id="main_container">
+        <div id="content">
+            <br>
+            <h1><u>Data Visualisation 2</u></h1>
+            
+            <h1 id="vis1_title">Crime rate</h1>
+            <div id="vis1_parent">
+                <div id="vis1_text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sapien ac felis imperdiet feugiat sit amet a turpis. Suspendisse auctor quis nibh sit amet convallis. Aenean quis est nec ipsum feugiat bibendum. Integer mattis tincidunt ante eget accumsan. Cras vel tortor dui. Maecenas sollicitudin nec mi sed bibendum.
+                        <br><br>
+                        Nulla convallis sodales ipsum sed tincidunt. Mauris porta ullamcorper ligula, non aliquam est ornare ut. Duis facilisis tortor id porttitor iaculis. Fusce augue risus, rhoncus vel nulla eu, fermentum ultricies ipsum. Sed arcu justo, dictum at leo faucibus, aliquam blandit neque. Suspendisse potenti. Curabitur lobortis pulvinar interdum.
+                    </p>
+                </div>
+                <div id="vis1"></div>
+            </div>
+            <br>
+            <div id="vis2_parent">
+                <div id="vis2"></div>
+                <div id="vis2_text">
+                    <h1>GDP</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sapien ac felis imperdiet feugiat sit amet a turpis. Suspendisse auctor quis nibh sit amet convallis. Aenean quis est nec ipsum feugiat bibendum. Integer mattis tincidunt ante eget accumsan. Cras vel tortor dui. Maecenas sollicitudin nec mi sed bibendum.
+                        <br><br>
+                        Nulla convallis sodales ipsum sed tincidunt. Mauris porta ullamcorper ligula, non aliquam est ornare ut. Duis facilisis tortor id porttitor iaculis. Fusce augue risus, rhoncus vel nulla eu, fermentum ultricies ipsum. Sed arcu justo, dictum at leo faucibus, aliquam blandit neque. Suspendisse potenti. Curabitur lobortis pulvinar interdum.
+                    </p>
+                </div>
+            </div>
+        
+            <br>
+            <div id="vis3_parent">
+                <div id="vis3_text">
+                    <h1>Drug prevalence</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sapien ac felis imperdiet feugiat sit amet a turpis. Suspendisse auctor quis nibh sit amet convallis. Aenean quis est nec ipsum feugiat bibendum. Integer mattis tincidunt ante eget accumsan. Cras vel tortor dui. Maecenas sollicitudin nec mi sed bibendum.
+                        <br><br>
+                        Nulla convallis sodales ipsum sed tincidunt. Mauris porta ullamcorper ligula, non aliquam est ornare ut. Duis facilisis tortor id porttitor iaculis. Fusce augue risus, rhoncus vel nulla eu, fermentum ultricies ipsum. Sed arcu justo, dictum at leo faucibus, aliquam blandit neque. Suspendisse potenti. Curabitur lobortis pulvinar interdum.
+                    </p>
+                </div>
+                <div id="vis3"></div>
+            </div>
+            <br>
+            <div id="references">
+                <h4>References</h4>
+                <p>
+                    Source of data for chart 1: 
+                    <a href = "https://www.example.com">https://www.example.com</a>
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 
