--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
                 <h4>References</h4>
                 <p>
                     Source of data for chart 1: 
-                    <a href = "https://www.example.com">https://www.example.com</a>
+                    <a href = "https://databank.worldbank.org/Crime-rate/id/e67da82#">https://databank.worldbank.org/Crime-rate/id/e67da82#</a>
+                    <br>
+                    Source of data for chart 2: 
+                    <a href = "https://databank.worldbank.org/source/world-development-indicators#">https://databank.worldbank.org/source/world-development-indicators#</a>
+                    <br>
+                    Source of data for chart 3: 
+                    <a href = "https://www.unodc.org/unodc/en/data-and-analysis/wdr2024-annex.html">https://www.unodc.org/unodc/en/data-and-analysis/wdr2024-annex.html</a>
                 </p>
             </div>
         </div>
