Update contents of visualisation dashboard
Changes include:
- Typeface changed to a sans-serif font family for body text
- Justify body text
- Replace placeholder text
- Change multiple pie chart to stacked bar chart
- Tooltips in map rounded to 3 decimal points
- Changed color scheme of charts to be colorblind friendly
- Increase size of visualization idioms to be more emphasized
- Add a few annotations to map
- Reduce number of items in bump chart
- Rescaled color groups of map
- Add interactivity to stacked bar chart

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <div id="main_container">
         <div id="content">
             <br>
-            <h1><u>Data Visualisation 2</u></h1>
+            <h1 id="pageTitle"><u>Data Visualisation 2</u></h1>
             
             <h1 id="vis1_title">Crime rate</h1>
             <div id="vis1_parent">
                 <div id="vis1_text">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sapien ac felis imperdiet feugiat sit amet a turpis. Suspendisse auctor quis nibh sit amet convallis. Aenean quis est nec ipsum feugiat bibendum. Integer mattis tincidunt ante eget accumsan. Cras vel tortor dui. Maecenas sollicitudin nec mi sed bibendum.
+                    <p class = "para">
+                        The visualisation shows the crime rate in different countries, measured as the number of homicides per 100,000 people.
                         <br><br>
-                        Nulla convallis sodales ipsum sed tincidunt. Mauris porta ullamcorper ligula, non aliquam est ornare ut. Duis facilisis tortor id porttitor iaculis. Fusce augue risus, rhoncus vel nulla eu, fermentum ultricies ipsum. Sed arcu justo, dictum at leo faucibus, aliquam blandit neque. Suspendisse potenti. Curabitur lobortis pulvinar interdum.
+                        A few notable observations from the visualisation are noted in the map in the years 2002, 2010 and 2011.
                     </p>
                 </div>
                 <div id="vis1"></div>
@@ -38,10 +38,10 @@
                 <div id="vis2"></div>
                 <div id="vis2_text">
                     <h1>GDP</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sapien ac felis imperdiet feugiat sit amet a turpis. Suspendisse auctor quis nibh sit amet convallis. Aenean quis est nec ipsum feugiat bibendum. Integer mattis tincidunt ante eget accumsan. Cras vel tortor dui. Maecenas sollicitudin nec mi sed bibendum.
+                    <p class = "para">
+                        The GDP per capita of different countries is shown in the bump chart.
                         <br><br>
-                        Nulla convallis sodales ipsum sed tincidunt. Mauris porta ullamcorper ligula, non aliquam est ornare ut. Duis facilisis tortor id porttitor iaculis. Fusce augue risus, rhoncus vel nulla eu, fermentum ultricies ipsum. Sed arcu justo, dictum at leo faucibus, aliquam blandit neque. Suspendisse potenti. Curabitur lobortis pulvinar interdum.
+                        Data used in the chart is based on the current (2024) US$.
                     </p>
                 </div>
             </div>
@@ -49,11 +49,11 @@
             <br>
             <div id="vis3_parent">
                 <div id="vis3_text">
-                    <h1>Drug prevalence</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sapien ac felis imperdiet feugiat sit amet a turpis. Suspendisse auctor quis nibh sit amet convallis. Aenean quis est nec ipsum feugiat bibendum. Integer mattis tincidunt ante eget accumsan. Cras vel tortor dui. Maecenas sollicitudin nec mi sed bibendum.
+                    <h1>Drug use</h1>
+                    <p class = "para">
+                        Finally, drug use prevalence is shown in the stacked bar chart.
                         <br><br>
-                        Nulla convallis sodales ipsum sed tincidunt. Mauris porta ullamcorper ligula, non aliquam est ornare ut. Duis facilisis tortor id porttitor iaculis. Fusce augue risus, rhoncus vel nulla eu, fermentum ultricies ipsum. Sed arcu justo, dictum at leo faucibus, aliquam blandit neque. Suspendisse potenti. Curabitur lobortis pulvinar interdum.
+                        Population on the y-axis represents percentage of population of that specific continent.
                     </p>
                 </div>
                 <div id="vis3"></div>
@@ -61,14 +61,14 @@
             <br>
             <div id="references">
                 <h4>References</h4>
-                <p>
-                    Source of data for chart 1: 
+                <p class = "refText">
+                    Source of data for chart 1 (last accessed Oct 2024): 
                     <a href = "https://databank.worldbank.org/Crime-rate/id/e67da82#">https://databank.worldbank.org/Crime-rate/id/e67da82#</a>
                     <br>
-                    Source of data for chart 2: 
+                    Source of data for chart 2 (last accessed Oct 2024): 
                     <a href = "https://databank.worldbank.org/source/world-development-indicators#">https://databank.worldbank.org/source/world-development-indicators#</a>
                     <br>
-                    Source of data for chart 3: 
+                    Source of data for chart 3 (last accessed Oct 2024): 
                     <a href = "https://www.unodc.org/unodc/en/data-and-analysis/wdr2024-annex.html">https://www.unodc.org/unodc/en/data-and-analysis/wdr2024-annex.html</a>
                 </p>
             </div>
